# Sudoku_horny

./: CMakeLists.txt  Classes.txt  Front.cpp  Front.h  Grid.cpp  Grid.h  Nicolas.cpp  Nicolas.h  README.md  SDButton.cpp  SDButton.h  amount_of_solutions.cpp  deleting_cells.cpp  generator.cpp  generator.h  main.cpp  rddth.h  solutions.cpp  solutions.h  sudoku_horny[1]
